# remote-browser

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  openbox.xml  policies.json  supervisord.conf
cef-browser/: Cargo.toml  Dockerfile  build.rs  run.sh
cef-browser/public/: app.js  index.html  manifest.json  style.css  sw.js
cef-browser/src/: api.rs  handler.rs  input.rs  main.rs  session.rs  ws.rs
cef-browser/wew/: Cargo.toml  build.rs
cef-browser/wew/cxx/: runtime.cpp  subprocess.cpp  webview.cpp  webview.h  wew.cpp  wew.h
cef-browser/wew/src/: runtime.rs  webview.rs
viewer/: server.ts
viewer/public/: app.js  index.html  manifest.json  style.css  vnc.html
