[package]
name = "cef-browser"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cef-browser"
path = "src/main.rs"

[dependencies]
wew = { path = "wew" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
